infra/networking.tf
resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "ECS-VPC"
  }
}

resource "aws_subnet" "PublicSub1" {
    vpc_id                  = aws_vpc.main.id
    cidr_block              = "10.0.1.0/24"
    availability_zone       = "us-east-1a" 
    map_public_ip_on_launch = true

    tags = {
      Name = "Public Subnet 1"
    }
}

resource "aws_subnet" "PublicSub2" {
    vpc_id                  = aws_vpc.main.id
    cidr_block              = "10.0.2.0/24"
    availability_zone       = "us-east-1b" 
    map_public_ip_on_launch = true

    tags = {
      Name = "Public Subnet 2"
    }
}

resource "aws_subnet" "PrivateSub1" {
    vpc_id            = aws_vpc.main.id
    cidr_block        = "10.0.3.0/24"
    availability_zone = "us-east-1a"  

    tags = {
      Name = "Private Subnet 1"
    }
}

resource "aws_subnet" "PrivateSub2" {
    vpc_id            = aws_vpc.main.id
    cidr_block        = "10.0.4.0/24"
    availability_zone = "us-east-1b"  

    tags = {
      Name = "Private Subnet 2"
    }
}

resource "aws_eip" "nat" {
  domain = "vpc"
  
  tags = {
    Name = "NAT Gateway EIP"
  }
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "Internet Gateway"
  }
}

resource "aws_nat_gateway" "gw" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.PublicSub1.id 

  tags = {
    Name = "NAT Gateway"
  }

  depends_on = [aws_internet_gateway.gw]
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id
    
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.gw.id
    }

    tags = {
      Name = "Public Route Table"
    }
}

resource "aws_route_table" "private" {
    vpc_id = aws_vpc.main.id
    
    route {
        cidr_block     = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.gw.id
    }

    tags = {
      Name = "Private Route Table"
    }
}

resource "aws_route_table_association" "public1" {
  subnet_id      = aws_subnet.PublicSub1.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public2" {
  subnet_id      = aws_subnet.PublicSub2.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private1" {
  subnet_id      = aws_subnet.PrivateSub1.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private2" {
  subnet_id      = aws_subnet.PrivateSub2.id
  route_table_id = aws_route_table.private.id
}
